--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ body{
 
 .navbar-nav{
   width: 100%;
+  height: 80px;
 }
 
 .edit{
@@ -60,7 +61,8 @@ body{
 .nav-item{
   font-size: 28px;
   width:100px;
-  padding-left: 270px;
+  /* padding-left: 270px; */
+  padding-left: 80px; 
 }
 
 .add{
@@ -99,7 +101,9 @@ body{
 }
 
 .nav-link{
-  font-size: 33px;
+  /* font-size: 33px; */
+  position: relative;
+  bottom: 35px;
 }
 
 label{
@@ -150,7 +154,6 @@ label{
   position: relative;
   bottom: 1px;
 }
-
 
 .btn-4::after{
   right:0;
