--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,17 @@ label{
   border: none;
   color: #ffffff;
 }
+
+input[type="text"],input[type="number"]{
+  outline: none;
+  box-shadow:none !important;
+  }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .btnz{
   height: 50px;
   width: 130px;
